wrap inputs in form for better semantics, fix timer text

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ body {
 }
 
 #display {
-  margin: auto;
+  margin: 1em auto;
   width: 50%;
+  max-width: 400px;
 }
